fix: fishing on mobile

--- a/app/thirty-factor-authentication/styles.css
+++ b/app/thirty-factor-authentication/styles.css
@@ -257,3 +257,11 @@ small {
   background: #0b486b;
   background: linear-gradient(#0b486b, #0b486b 20%, #f56217);
 }
+
+.hold-button * {
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+
+  touch-action: manipulation;
+}
